kinda fix cacheRoutes task yikes