@@ -33,6 +33,14 @@ android {
     kotlinOptions {
         jvmTarget = versions.java.version
     }
+    // java 17 mockito issue: https://stackoverflow.com/questions/68113065/mockito-inaccessible-object-exception-while-creating-a-mock-object
+    // something up with gson lol
+    // TODO: if we change mockito libs/update or swap out GSON, test with this removed
+    testOptions {
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        }
+    }
 }
 
 dependencies {
@@ -47,16 +55,23 @@ dependencies {
 
 def assetsCachePath = "${project(':app').projectDir}/src/main/assets/cache"
 
-task cacheRoutes(type: JavaExec) {
+tasks.register('cacheRoutes', JavaExec) {
+    dependsOn 'compileDebugUnitTestSources'
+
     // https://github.com/pinterest/ktlint/issues/1184#issuecomment-892039662
     mainClass.set 'com.rectanglel.patstatic.buildutils.TrueTimeDataCacher'
-//    classpath = sourceSets.testDebug.runtimeClasspath
-    classpath += files(getBuildDir().toString() + "/intermediates/classes/debug")
+    classpath += files(
+            getBuildDir().toString() + "/intermediates/classes/debugUnitTest",
+            getBuildDir().toString() + "/tmp/kotlin-classes/debugUnitTest"
+
+    )
+    android.libraryVariants.each { variant -> // or libraryVariants
+        // add each variant's compiler classpath onto this classpath
+        classpath += variant.javaCompileProvider.get().classpath
+    }
     args keys.truetime.debug, assetsCachePath
 }
 
 task cleanCachedRoutes(type: Delete) {
     delete assetsCachePath
 }
-
-//jar.dependsOn cacheRoutes
